Add the tws api